# Protocol-Zero

./: .env.example  .gitignore  ADVANCED_STRESS_TEST_RESULTS.md  DEPLOYMENT.md  DEPLOYMENT_STRESS_TEST_GUIDE.md  DEPLOYMENT_STRESS_TEST_SUMMARY.md  DEPLOYMENT_TEST_REPORT.md  Dockerfile  HACKATHON_IMPROVEMENT_PLAN.md  HACKATHON_SUBMISSION.md  LICENSE  README.md  app.py  app_core.py  brain.py  chain_interactor.py  config.py  dashboard.py  dex_executor.py  eip712_signer.py  exceptions.py  health_monitor.py  main.py  metadata_handler.py  nova_act_auditor.py  nova_embeddings.py  nova_sonic_voice.py  performance_tracker.py  pyproject.toml  render.yaml  requirements.txt  risk_check.py  risk_execution_panel.py  session_store.py  sign_trade.py  streamlit_app.py  test_frag.py  ui_components.py  validation_artifacts.py  what the bot actually does right now
.streamlit/: config.toml  secrets.toml.example
artifacts/: pz-20260312052458-0001.json  pz-20260312052733-0002.json  pz-20260312053054-0003.json  pz-20260312053243-0004.json  pz-20260312053425-0005.json  pz-20260312053606-0006.json  pz-20260312053747-0007.json  pz-20260312053927-0008.json  pz-20260312054108-0009.json  pz-20260312061417-0001.json  pz-20260312061604-0002.json  pz-20260312061745-0003.json  pz-20260312061926-0004.json  pz-20260312062106-0005.json  pz-20260312062247-0006.json  pz-20260312122653-0001.json  pz-20260312122723-0002.json  pz-20260312122740-0003.json  pz-20260312122818-0004.json  pz-20260312123017-0005.json  pz-20260312123024-0006.json  pz-20260312123030-0007.json  pz-20260312123037-0008.json  pz-20260312123043-0009.json  pz-20260312123050-0010.json  pz-20260312123104-0011.json  (+3 more)
(+33 files in other folders)
